fix: public profile
