# backend/src/modules/profile-candidate/profile-public.controller.ts
@@ -1,0 +1,27 @@
+import {
+  Controller,
+  Get,
+  Param,
+} from '@nestjs/common';
+import {
+  ApiTags,
+} from '@nestjs/swagger';
+
+import { ProfileService } from './profile.service';
+
+@ApiTags('Public Profiles')
+@Controller('profile')
+export class PublicProfileController {
+  constructor(
+    private readonly profileService: ProfileService,
+  ) {}
+
+  @Get('public/:username')
+  getPublicProfile(
+    @Param('username') username: string,
+  ) {
+    return this.profileService.getPublicProfile(
+      username,
+    );
+  }
+}
